--- a/Glass-HTML-CSS/index.html
+++ b/Glass-HTML-CSS/index.html
@@ -16,7 +16,7 @@
             <div class="dashboard">
                 <div class="user">
                     <img src="/images/avatar.png" alt="">
-                    <h3>Sidharth</h3>
+                    <h3>Simo Edwin</h3>
                     <p>Pro Member</p>
                 </div>
                 <div class="links">
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="pro">
-                    <h2>Join pro for free games</h2>
+                    <h2>Join pro for free games.</h2>
                 <img src="/images/controller.png" alt="">
                 </div>
 
