--- a/JavaScript/1/index.html
+++ b/JavaScript/1/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Musikalis</title>
 </head>
 <body>
-    <div class="main-div">
-        <h1></h1>
-    </div>
+    <header>
+        <nav>
+
+        </nav>
+    </header>
+
 </body>
 <script src="index.js"></script>
 </html>
