--- a/JavaScript/1/index.html
+++ b/JavaScript/1/index.html
@@ -5,14 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Musikalis</title>
+    <title>Learning CSS</title>
 </head>
 <body>
-    <header>
-        <nav>
 
-        </nav>
-    </header>
+
 
 </body>
 <script src="index.js"></script>
