--- a/JavaScript/1/index.html
+++ b/JavaScript/1/index.html
@@ -8,7 +8,17 @@
     <title>Learning CSS</title>
 </head>
 <body>
-
+    <header>
+        <img src="https://www.svgrepo.com/download/923/leaf.svg" class='logo' alt="logo">
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </nav>
+        <a href="#" class="cta"><button>Contact Us</button></a>
+    </header>
 
 
 </body>
