--- a/Alpine-JS/tut2/index.html
+++ b/Alpine-JS/tut2/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div x-data="{ todos: [], userInput: ''}">
-        <form x-on:submit.prevent>
+        <form @submit.prevent>
             <input x-model="userInput" placeholder="Enter todo Item" type="text" name="" id="">
-            <button x-on:click="todos.push({name: userInput, completed: false})" >Add</button>
+            <button @click="todos.push({name: userInput, completed: false})" >Add</button>
         </form>
         <template x-for="todo in todos">
             <div>
                 <input type="checkbox">
                 <span x-text="todo.name"></span>
-                <button>X</button>
+                <button @click="todos = todos.filter((current) => current != todo)">x</button>
             </div>
         </template>
     </div>
