Done with Todolist using alpine starting styles

--- a/Alpine-JS/tut2/index.html
+++ b/Alpine-JS/tut2/index.html
@@ -35,7 +35,7 @@
         <button @click="todos = []" x-show="todos.length" class="btn">Clear</button>
         <div>
             <span x-text="todos.filter((todo) => todo.completed).length"></span>/
-            <span x-text="todos.length"></span> completed
+            <span x-text="todos.length"></span> completed Todos
         </div>
     </div>
 </body>
