--- a/JavaScript/JS-Basics-2/index.html
+++ b/JavaScript/JS-Basics-2/index.html
@@ -6,6 +6,8 @@
     <title>JS Boilerplate</title>
 </head>
 <body>
-    
+    <h1>Hello World</h1>
+
+    <script src="main.js"></script>
 </body>
 </html>
